--- a/.github/workflows/compress-images.yaml
+++ b/.github/workflows/compress-images.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Compress Images
         id: calibre
-        uses: calibreapp/image-actions@v1
+        uses: calibreapp/image-actions@1.1.0
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           compressOnly: true
